RESOLVED FIXED52387
REGRESSION: "Invalid date" message from Prometheus apartment search website
https://bugs.webkit.org/show_bug.cgi?id=52387
Summary REGRESSION: "Invalid date" message from Prometheus apartment search website
Michael Saboff
Reported 2011-01-13 11:59:22 PST
* STEPS TO REPRODUCE 1. Load <http://property.onesite.realpage.com/ol2/(S(nd33kmi3bnaaw23olth4ci45))/sites/prometheus/default.aspx>. 2. Change the "Apartment type" dropdown to "1 Bedroom Large" 3. Press "Search". * RESULTS A message saying "Invalid date" is displayed next to the "Move in date" field. * REGRESSION This works prior to r73307. I assume based on the nature of the change in r73307 that the website is using a regexp of some sort for date validation. The following JavaScript snippet is sufficient to reproduce the failure: (new RegExp("^([1][0-2]|[0]\\d|\\d)(\\/|\\.|\\-)([0-2]\\d|[3][0-1]|\\d)((\\/|\\.|\\-)(\\d\\d|\\d\\d\\d\\d)|)$")).exec("1/9/2011")
Attachments
Patch to use indirect jump if available for DataLabelPtr linkage. (10.62 KB, patch)
2011-01-13 21:32 PST, Michael Saboff
oliver: review+
Michael Saboff
Comment 1 2011-01-13 21:32:04 PST
Created attachment 78887 [details] Patch to use indirect jump if available for DataLabelPtr linkage.
Oliver Hunt
Comment 2 2011-01-13 21:50:40 PST
r=me
Michael Saboff
Comment 3 2011-01-14 08:03:21 PST
Note You need to log in before you can comment on or make changes to this bug.